2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/TextThought.py:
	Fix issue 136 with patch provided by Dennis Guse

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* configure.ac:
	Fix issue 143 with patch provided by CaptainM...

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/Makefile.in:
	Add ResourceThought

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MapList.py:
	Fix issue 148 with Patch from "perlhead"

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/*.py:
	Respect PEP-8.

2011-04-23 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	* src/utils.py:
	Replace deprecated libs

2009-03-08 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/labyrinth.glade
	Fix Gtk warning

2009-02-28 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	Used wrong variable name use height instead of heigth0. Thanks to
	Kunshan Wang for the pointer.

2009-02-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* data/Makefile.am
	Fix issue 132. Thanks again to Romain Tartiere.

2009-02-27 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/labyrinth.py
	Fix issue 133. Thanks to Romain Tartiere.

2009-02-26 Martin Schaaf <mascha@ma-scha.de>

	* src/MMapArea.py
	Fix issue 135. Thanks to wks1985 for the patch.

2008-09-25 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix issue 126.

2008-08-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MMapArea.py
	Fix issue 125.

2008-08-10 Matthias Vogelgesang <matthias.vogelgesang@gmail.com>

	* src/MainWindow.py
	Set default size something lower so it works with netbook dimensions.

2008-07-21 Martin Schaaf <mascha@ma-scha.de>

	* src/utils.py
	* src/MainWindow.py
	* src/MMapArea.py
	o fix issue 86 by setting gnome theme default font

2008-07-21 Martin Schaaf <mascha@ma-scha.de>

	* ChangeLog
	o add missing entries
